parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> all
Rule 1     atom -> STRING
Rule 2     atom -> INT
Rule 3     atom -> FLOAT
Rule 4     atom -> NAME
Rule 5     atom -> { command_list }
Rule 6     atom -> { command }
Rule 7     atom -> [ atom_list ]
Rule 8     atom -> atom . NAME
Rule 9     command -> atom atom_list
Rule 10    command_list -> <empty>
Rule 11    command_list -> command_list NEWLINE
Rule 12    command_list -> command_list NEWLINE command
Rule 13    atom_list -> <empty>
Rule 14    atom_list -> atom_list atom
Rule 15    all -> command_list

Terminals, with rules where they appear

.                    : 8
FLOAT                : 3
INT                  : 2
NAME                 : 4 8
NEWLINE              : 11 12
STRING               : 1
[                    : 7
]                    : 7
error                : 
{                    : 5 6
}                    : 5 6

Nonterminals, with rules where they appear

all                  : 0
atom                 : 8 9 14
atom_list            : 7 9 14
command              : 6 12
command_list         : 5 11 12 15

Parsing method: LALR

state 0

    (0) S' -> . all
    (15) all -> . command_list
    (10) command_list -> .
    (11) command_list -> . command_list NEWLINE
    (12) command_list -> . command_list NEWLINE command

    NEWLINE         reduce using rule 10 (command_list -> .)
    $end            reduce using rule 10 (command_list -> .)

    command_list                   shift and go to state 1
    all                            shift and go to state 2

state 1

    (15) all -> command_list .
    (11) command_list -> command_list . NEWLINE
    (12) command_list -> command_list . NEWLINE command

    $end            reduce using rule 15 (all -> command_list .)
    NEWLINE         shift and go to state 3


state 2

    (0) S' -> all .



state 3

    (11) command_list -> command_list NEWLINE .
    (12) command_list -> command_list NEWLINE . command
    (9) command -> . atom atom_list
    (1) atom -> . STRING
    (2) atom -> . INT
    (3) atom -> . FLOAT
    (4) atom -> . NAME
    (5) atom -> . { command_list }
    (6) atom -> . { command }
    (7) atom -> . [ atom_list ]
    (8) atom -> . atom . NAME

    NEWLINE         reduce using rule 11 (command_list -> command_list NEWLINE .)
    $end            reduce using rule 11 (command_list -> command_list NEWLINE .)
    }               reduce using rule 11 (command_list -> command_list NEWLINE .)
    STRING          shift and go to state 11
    INT             shift and go to state 10
    FLOAT           shift and go to state 4
    NAME            shift and go to state 7
    {               shift and go to state 9
    [               shift and go to state 5

    command                        shift and go to state 8
    atom                           shift and go to state 6

state 4

    (3) atom -> FLOAT .

    .               reduce using rule 3 (atom -> FLOAT .)
    STRING          reduce using rule 3 (atom -> FLOAT .)
    INT             reduce using rule 3 (atom -> FLOAT .)
    FLOAT           reduce using rule 3 (atom -> FLOAT .)
    NAME            reduce using rule 3 (atom -> FLOAT .)
    {               reduce using rule 3 (atom -> FLOAT .)
    [               reduce using rule 3 (atom -> FLOAT .)
    }               reduce using rule 3 (atom -> FLOAT .)
    ]               reduce using rule 3 (atom -> FLOAT .)
    NEWLINE         reduce using rule 3 (atom -> FLOAT .)
    $end            reduce using rule 3 (atom -> FLOAT .)


state 5

    (7) atom -> [ . atom_list ]
    (13) atom_list -> .
    (14) atom_list -> . atom_list atom

    ]               reduce using rule 13 (atom_list -> .)
    STRING          reduce using rule 13 (atom_list -> .)
    INT             reduce using rule 13 (atom_list -> .)
    FLOAT           reduce using rule 13 (atom_list -> .)
    NAME            reduce using rule 13 (atom_list -> .)
    {               reduce using rule 13 (atom_list -> .)
    [               reduce using rule 13 (atom_list -> .)

    atom_list                      shift and go to state 12

state 6

    (9) command -> atom . atom_list
    (8) atom -> atom . . NAME
    (13) atom_list -> .
    (14) atom_list -> . atom_list atom

    .               shift and go to state 13
    STRING          reduce using rule 13 (atom_list -> .)
    INT             reduce using rule 13 (atom_list -> .)
    FLOAT           reduce using rule 13 (atom_list -> .)
    NAME            reduce using rule 13 (atom_list -> .)
    {               reduce using rule 13 (atom_list -> .)
    [               reduce using rule 13 (atom_list -> .)
    NEWLINE         reduce using rule 13 (atom_list -> .)
    $end            reduce using rule 13 (atom_list -> .)
    }               reduce using rule 13 (atom_list -> .)

    atom_list                      shift and go to state 14

state 7

    (4) atom -> NAME .

    .               reduce using rule 4 (atom -> NAME .)
    STRING          reduce using rule 4 (atom -> NAME .)
    INT             reduce using rule 4 (atom -> NAME .)
    FLOAT           reduce using rule 4 (atom -> NAME .)
    NAME            reduce using rule 4 (atom -> NAME .)
    {               reduce using rule 4 (atom -> NAME .)
    [               reduce using rule 4 (atom -> NAME .)
    }               reduce using rule 4 (atom -> NAME .)
    ]               reduce using rule 4 (atom -> NAME .)
    NEWLINE         reduce using rule 4 (atom -> NAME .)
    $end            reduce using rule 4 (atom -> NAME .)


state 8

    (12) command_list -> command_list NEWLINE command .

    NEWLINE         reduce using rule 12 (command_list -> command_list NEWLINE command .)
    $end            reduce using rule 12 (command_list -> command_list NEWLINE command .)
    }               reduce using rule 12 (command_list -> command_list NEWLINE command .)


state 9

    (5) atom -> { . command_list }
    (6) atom -> { . command }
    (10) command_list -> .
    (11) command_list -> . command_list NEWLINE
    (12) command_list -> . command_list NEWLINE command
    (9) command -> . atom atom_list
    (1) atom -> . STRING
    (2) atom -> . INT
    (3) atom -> . FLOAT
    (4) atom -> . NAME
    (5) atom -> . { command_list }
    (6) atom -> . { command }
    (7) atom -> . [ atom_list ]
    (8) atom -> . atom . NAME

    }               reduce using rule 10 (command_list -> .)
    NEWLINE         reduce using rule 10 (command_list -> .)
    STRING          shift and go to state 11
    INT             shift and go to state 10
    FLOAT           shift and go to state 4
    NAME            shift and go to state 7
    {               shift and go to state 9
    [               shift and go to state 5

    command_list                   shift and go to state 15
    command                        shift and go to state 16
    atom                           shift and go to state 6

state 10

    (2) atom -> INT .

    .               reduce using rule 2 (atom -> INT .)
    STRING          reduce using rule 2 (atom -> INT .)
    INT             reduce using rule 2 (atom -> INT .)
    FLOAT           reduce using rule 2 (atom -> INT .)
    NAME            reduce using rule 2 (atom -> INT .)
    {               reduce using rule 2 (atom -> INT .)
    [               reduce using rule 2 (atom -> INT .)
    }               reduce using rule 2 (atom -> INT .)
    ]               reduce using rule 2 (atom -> INT .)
    NEWLINE         reduce using rule 2 (atom -> INT .)
    $end            reduce using rule 2 (atom -> INT .)


state 11

    (1) atom -> STRING .

    .               reduce using rule 1 (atom -> STRING .)
    STRING          reduce using rule 1 (atom -> STRING .)
    INT             reduce using rule 1 (atom -> STRING .)
    FLOAT           reduce using rule 1 (atom -> STRING .)
    NAME            reduce using rule 1 (atom -> STRING .)
    {               reduce using rule 1 (atom -> STRING .)
    [               reduce using rule 1 (atom -> STRING .)
    }               reduce using rule 1 (atom -> STRING .)
    ]               reduce using rule 1 (atom -> STRING .)
    NEWLINE         reduce using rule 1 (atom -> STRING .)
    $end            reduce using rule 1 (atom -> STRING .)


state 12

    (7) atom -> [ atom_list . ]
    (14) atom_list -> atom_list . atom
    (1) atom -> . STRING
    (2) atom -> . INT
    (3) atom -> . FLOAT
    (4) atom -> . NAME
    (5) atom -> . { command_list }
    (6) atom -> . { command }
    (7) atom -> . [ atom_list ]
    (8) atom -> . atom . NAME

    ]               shift and go to state 17
    STRING          shift and go to state 11
    INT             shift and go to state 10
    FLOAT           shift and go to state 4
    NAME            shift and go to state 7
    {               shift and go to state 9
    [               shift and go to state 5

    atom                           shift and go to state 18

state 13

    (8) atom -> atom . . NAME

    NAME            shift and go to state 19


state 14

    (9) command -> atom atom_list .
    (14) atom_list -> atom_list . atom
    (1) atom -> . STRING
    (2) atom -> . INT
    (3) atom -> . FLOAT
    (4) atom -> . NAME
    (5) atom -> . { command_list }
    (6) atom -> . { command }
    (7) atom -> . [ atom_list ]
    (8) atom -> . atom . NAME

    NEWLINE         reduce using rule 9 (command -> atom atom_list .)
    $end            reduce using rule 9 (command -> atom atom_list .)
    }               reduce using rule 9 (command -> atom atom_list .)
    STRING          shift and go to state 11
    INT             shift and go to state 10
    FLOAT           shift and go to state 4
    NAME            shift and go to state 7
    {               shift and go to state 9
    [               shift and go to state 5

    atom                           shift and go to state 18

state 15

    (5) atom -> { command_list . }
    (11) command_list -> command_list . NEWLINE
    (12) command_list -> command_list . NEWLINE command

    }               shift and go to state 20
    NEWLINE         shift and go to state 3


state 16

    (6) atom -> { command . }

    }               shift and go to state 21


state 17

    (7) atom -> [ atom_list ] .

    .               reduce using rule 7 (atom -> [ atom_list ] .)
    STRING          reduce using rule 7 (atom -> [ atom_list ] .)
    INT             reduce using rule 7 (atom -> [ atom_list ] .)
    FLOAT           reduce using rule 7 (atom -> [ atom_list ] .)
    NAME            reduce using rule 7 (atom -> [ atom_list ] .)
    {               reduce using rule 7 (atom -> [ atom_list ] .)
    [               reduce using rule 7 (atom -> [ atom_list ] .)
    }               reduce using rule 7 (atom -> [ atom_list ] .)
    ]               reduce using rule 7 (atom -> [ atom_list ] .)
    NEWLINE         reduce using rule 7 (atom -> [ atom_list ] .)
    $end            reduce using rule 7 (atom -> [ atom_list ] .)


state 18

    (14) atom_list -> atom_list atom .
    (8) atom -> atom . . NAME

    STRING          reduce using rule 14 (atom_list -> atom_list atom .)
    INT             reduce using rule 14 (atom_list -> atom_list atom .)
    FLOAT           reduce using rule 14 (atom_list -> atom_list atom .)
    NAME            reduce using rule 14 (atom_list -> atom_list atom .)
    {               reduce using rule 14 (atom_list -> atom_list atom .)
    [               reduce using rule 14 (atom_list -> atom_list atom .)
    NEWLINE         reduce using rule 14 (atom_list -> atom_list atom .)
    $end            reduce using rule 14 (atom_list -> atom_list atom .)
    }               reduce using rule 14 (atom_list -> atom_list atom .)
    ]               reduce using rule 14 (atom_list -> atom_list atom .)
    .               shift and go to state 13


state 19

    (8) atom -> atom . NAME .

    .               reduce using rule 8 (atom -> atom . NAME .)
    STRING          reduce using rule 8 (atom -> atom . NAME .)
    INT             reduce using rule 8 (atom -> atom . NAME .)
    FLOAT           reduce using rule 8 (atom -> atom . NAME .)
    NAME            reduce using rule 8 (atom -> atom . NAME .)
    {               reduce using rule 8 (atom -> atom . NAME .)
    [               reduce using rule 8 (atom -> atom . NAME .)
    }               reduce using rule 8 (atom -> atom . NAME .)
    ]               reduce using rule 8 (atom -> atom . NAME .)
    NEWLINE         reduce using rule 8 (atom -> atom . NAME .)
    $end            reduce using rule 8 (atom -> atom . NAME .)


state 20

    (5) atom -> { command_list } .

    .               reduce using rule 5 (atom -> { command_list } .)
    STRING          reduce using rule 5 (atom -> { command_list } .)
    INT             reduce using rule 5 (atom -> { command_list } .)
    FLOAT           reduce using rule 5 (atom -> { command_list } .)
    NAME            reduce using rule 5 (atom -> { command_list } .)
    {               reduce using rule 5 (atom -> { command_list } .)
    [               reduce using rule 5 (atom -> { command_list } .)
    }               reduce using rule 5 (atom -> { command_list } .)
    ]               reduce using rule 5 (atom -> { command_list } .)
    NEWLINE         reduce using rule 5 (atom -> { command_list } .)
    $end            reduce using rule 5 (atom -> { command_list } .)


state 21

    (6) atom -> { command } .

    .               reduce using rule 6 (atom -> { command } .)
    STRING          reduce using rule 6 (atom -> { command } .)
    INT             reduce using rule 6 (atom -> { command } .)
    FLOAT           reduce using rule 6 (atom -> { command } .)
    NAME            reduce using rule 6 (atom -> { command } .)
    {               reduce using rule 6 (atom -> { command } .)
    [               reduce using rule 6 (atom -> { command } .)
    }               reduce using rule 6 (atom -> { command } .)
    ]               reduce using rule 6 (atom -> { command } .)
    NEWLINE         reduce using rule 6 (atom -> { command } .)
    $end            reduce using rule 6 (atom -> { command } .)

